--- a/home-4.html
+++ b/home-4.html
@@ -334,29 +334,73 @@
 
         <!-- Hero -->
         <section id="slider" class="hero p-0 odd">
-            <div class="swiper-container full-slider featured animation slider-h-100">
+            <div class="swiper-container full-slider featured animation slider-h-200">
                 <div class="swiper-wrapper">
 
                     <!-- Item 1 -->
                     <div class="swiper-slide slide-center" id="1">
-
                         <div>
-                            <img data-aos="zoom-out-up" data-aos-delay="800" src="assets/images/hero-1.png" class="hero-image" alt="Hero Image">
-                            <div class="slide-content row" data-mask-768="70">
-                                <div class="col-12 d-flex inner">
-                                    <div class="left align-self-center text-center text-md-left">
-                                        <h1 data-aos="zoom-out-up" data-aos-delay="400" class="title">
-                                        <span class="title-1">Jump</span> <br>
-                                        <span class="title-2">Into</span> <br>
-                                        <span class="title-3">Growth</span>
-                                        </h1>
-                                        <p data-aos="zoom-out-up" data-aos-delay="800" class="description">Bunji pairs rich digital marketing expertise with a full range of services and technology that allow you to kickstart business innovation.</p>
-                                        <a href="#contact" data-aos="zoom-out-up" data-aos-delay="1200" class="smooth-anchor ml-auto mr-auto ml-md-0 mt-4 btn primary-button">See How</a>
+                            <section>
+                                <img data-aos="zoom-out-up" data-aos-delay="800" src="assets/images/hero-1.png" class="hero-image" alt="Hero Image">
+                                <div class="slide-content row" data-mask-768="70">
+                                    <div class="col-12 d-flex inner">
+                                        <div class="left align-self-center text-center text-md-left">
+                                            <h1 data-aos="zoom-out-up" data-aos-delay="400" class="title">
+                                            <span class="title-1">Jump</span> <br>
+                                            <span class="title-2">Into</span> <br>
+                                            <span class="title-3">Growth</span>
+                                            </h1>
+                                            <p data-aos="zoom-out-up" data-aos-delay="800" class="description">Bunji pairs rich digital marketing expertise with a full range of services and technology that allow you to kickstart business innovation.</p>
+                                            <a href="#contact" data-aos="zoom-out-up" data-aos-delay="1200" class="smooth-anchor ml-auto mr-auto ml-md-0 mt-4 btn primary-button">See How</a>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
+                            </section>
                             <!-- About [1] -->
-                            <section data-id="1" class="section-3 section-about highlights image-left slider_body--show">
+                            <section data-id="1" class="section-3 section-about highlights image-left">
+                                <div class="container-about">
+                                    <div class="row">
+                                        <div class="col-12 col-md-6" style="padding-left: 0;">
+                                                <img src="assets/images/about.png" class="fit-image" alt="Institutional">
+                                        </div>
+                                        <div class="col-12 col-md-5 pl-md-5 align-self-center text-center text-md-left">
+                                            <div class="row intro">
+                                                <div class="col-12 p-0">
+                                                    <h2 class="title-about">What does growth</h2>
+                                                    <h3 class="h3-about">look like to you?</h3>
+                                                    <h4 class="h4-about">We focus on <b>RESULTS, not words.</b></h4>
+                                                    <p class="p-about">If your digital marketing efforts aren't accelerating growth, ours will. Scale your lead pipeline, convert more customers, and expand to new areas or markets. From strategy and creative development to disciplined campaign execution - we deliver real results.</p>
+                                                    <a href="#contact" data-aos="zoom-out-up" data-aos-delay="1200" class="smooth-anchor ml-auto mr-auto ml-md-0 mt-4 btn primary-button">See what's Possible</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </section>
+                        </div>
+                    </div>
+
+                    <!-- Item 2 -->
+                    <div class="swiper-slide slide-center" id="2">
+                        <div>
+                            <section>
+                                <img data-aos="zoom-out-up" data-aos-delay="800" src="assets/images/hero-2.png" class="hero-image2" alt="Hero Image">
+                                <div class="slide-content row" data-mask-768="70">
+                                    <div class="col-12 d-flex inner">
+                                        <div class="left align-self-center text-center text-md-left">
+                                            <h2 data-aos="zoom-out-up" data-aos-delay="400" class="title">
+                                                <span class="title-1">Go further,</span> <br>
+                                                <span class="title-3">together</span>
+                                                </h2>
+                                            <p data-aos="zoom-out-up" data-aos-delay="800" class="description"><br>Bunji can be outsourced as your in-house team. We can function as your CMO, build and execute comprehensive, multi-channel digital campaigns, or recommend and implement integrated technology platforms to support your programs. You decide how you'd like to partner up.</p>
+                                            <a href="#contact" data-aos="zoom-out-up" data-aos-delay="1200" class="smooth-anchor ml-auto mr-auto ml-md-0 mt-4 btn primary-button">See How</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </section>
+
+                            <!-- About [2] -->
+                            <section data-id="2" class="section-3 section-about highlights image-left">
                                 <div class="container-about">
                                     <div class="row">
                                         <div class="col-12 col-md-6" style="padding-left: 0;">
@@ -377,42 +421,51 @@
                                 </div>
                             </section>
 
-
-                        </div>
-                    </div>
-
-                    <!-- Item 2 -->
-                    <div class="swiper-slide slide-center" id="2">
-                        <img data-aos="zoom-out-up" data-aos-delay="800" src="assets/images/hero-2.png" class="hero-image2" alt="Hero Image">
-                        <div class="slide-content row" data-mask-768="70">
-                            <div class="col-12 d-flex inner">
-                                <div class="left align-self-center text-center text-md-left">
-                                    <h2 data-aos="zoom-out-up" data-aos-delay="400" class="title">
-                                        <span class="title-1">Go further,</span> <br>
-                                        <span class="title-3">together</span>
-                                        </h2>
-                                    <p data-aos="zoom-out-up" data-aos-delay="800" class="description"><br>Bunji can be outsourced as your in-house team. We can function as your CMO, build and execute comprehensive, multi-channel digital campaigns, or recommend and implement integrated technology platforms to support your programs. You decide how you'd like to partner up.</p>
-                                    <a href="#contact" data-aos="zoom-out-up" data-aos-delay="1200" class="smooth-anchor ml-auto mr-auto ml-md-0 mt-4 btn primary-button">See How</a>
-                                </div>
-                            </div>
                         </div>
                     </div>
 
                     <!-- Item 3 -->
                     <div class="swiper-slide slide-center" id="3">
-                        <img data-aos="zoom-out-up" data-aos-delay="800" src="assets/images/hero-3.png" class="hero-image3" alt="Hero Image">
-                        <div class="slide-content row" data-mask-768="70">
-                            <div class="col-12 d-flex inner">
-                                <div class="left slider-3 align-self-center text-center text-md-left">
-                                    <h2 data-aos="zoom-out-up" data-aos-delay="400" class="title">
-                                        <span class="title-1">Data -driven</span> <br>
-                                        <span class="title-2">results to scale</span> <br>
-                                        <span class="title-3">your business</span>
-                                        </h2>
-                                        <p data-aos="zoom-out-up" data-aos-delay="800" class="description">Bunji can be outsourced as your in-house team. We can function as your CMO, build and execute comprehensive, multi-channel digital campaigns, or recommend and implement integrated technology platforms to support your programs. You decide how you'd like to partner up.</p>
-                                    <a href="#contact" data-aos="zoom-out-up" data-aos-delay="1200" class="smooth-anchor ml-auto mr-auto ml-md-0 mt-4 btn primary-button">See How</a>
+                        <div>
+                            <section>
+                                <img data-aos="zoom-out-up" data-aos-delay="800" src="assets/images/hero-3.png" class="hero-image3" alt="Hero Image">
+                                <div class="slide-content row" data-mask-768="70">
+                                    <div class="col-12 d-flex inner">
+                                        <div class="left slider-3 align-self-center text-center text-md-left">
+                                            <h2 data-aos="zoom-out-up" data-aos-delay="400" class="title">
+                                                <span class="title-1">Data -driven</span> <br>
+                                                <span class="title-2">results to scale</span> <br>
+                                                <span class="title-3">your business</span>
+                                                </h2>
+                                                <p data-aos="zoom-out-up" data-aos-delay="800" class="description">Bunji can be outsourced as your in-house team. We can function as your CMO, build and execute comprehensive, multi-channel digital campaigns, or recommend and implement integrated technology platforms to support your programs. You decide how you'd like to partner up.</p>
+                                            <a href="#contact" data-aos="zoom-out-up" data-aos-delay="1200" class="smooth-anchor ml-auto mr-auto ml-md-0 mt-4 btn primary-button">See How</a>
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
+                            </section>
+
+                            <!-- About [3] -->
+                            <section data-id="3" class="section-3 section-about highlights image-left">
+                                <div class="container-about">
+                                    <div class="row">
+                                        <div class="col-12 col-md-6" style="padding-left: 0;">
+                                                <img src="assets/images/about.png" class="fit-image" alt="Institutional">
+                                        </div>
+                                        <div class="col-12 col-md-5 pl-md-5 align-self-center text-center text-md-left">
+                                            <div class="row intro">
+                                                <div class="col-12 p-0">
+                                                    <h2 class="title-about">What does growth</h2>
+                                                    <h3 class="h3-about">look like to you?</h3>
+                                                    <h4 class="h4-about">We focus on <b>RESULTS, not words.</b></h4>
+                                                    <p class="p-about">If your digital marketing efforts aren't accelerating growth, ours will. Scale your lead pipeline, convert more customers, and expand to new areas or markets. From strategy and creative development to disciplined campaign execution - we deliver real results.</p>
+                                                    <a href="#contact" data-aos="zoom-out-up" data-aos-delay="1200" class="smooth-anchor ml-auto mr-auto ml-md-0 mt-4 btn primary-button">See what's Possible</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </section>
+
                         </div>
                     </div>
 
@@ -420,77 +473,6 @@
                 <div class="swiper-pagination"></div>
             </div>
         </section>
-
-        <!-- About [1] -->
-        <section data-id="1" class="section-3 section-about highlights image-left slider_body--show">
-            <div class="container-about">
-                <div class="row">
-                    <div class="col-12 col-md-6" style="padding-left: 0;">
-                            <img src="assets/images/about.png" class="fit-image" alt="Institutional">
-                    </div>
-                    <div class="col-12 col-md-5 pl-md-5 align-self-center text-center text-md-left">
-                        <div class="row intro">
-                            <div class="col-12 p-0">
-                                <h2 class="title-about">What does growth</h2>
-                                <h3 class="h3-about">look like to you?</h3>
-                                <h4 class="h4-about">We focus on <b>RESULTS, not words.</b></h4>
-                                <p class="p-about">If your digital marketing efforts aren't accelerating growth, ours will. Scale your lead pipeline, convert more customers, and expand to new areas or markets. From strategy and creative development to disciplined campaign execution - we deliver real results.</p>
-                                <a href="#contact" data-aos="zoom-out-up" data-aos-delay="1200" class="smooth-anchor ml-auto mr-auto ml-md-0 mt-4 btn primary-button">See what's Possible</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-
-        <!-- About [2] -->
-        <section data-id="2" class="section-3 section-about highlights image-left slider_body">
-            <div class="container-about">
-                <div class="row">
-                    <div class="col-12 col-md-6" style="padding-left: 0;">
-                            <img src="assets/images/about.png" class="fit-image" alt="Institutional">
-                    </div>
-                    <div class="col-12 col-md-5 pl-md-5 align-self-center text-center text-md-left">
-                        <div class="row intro">
-                            <div class="col-12 p-0">
-                                <h2 class="title-about">What does growth</h2>
-                                <h3 class="h3-about">look like to you?</h3>
-                                <h4 class="h4-about">We focus on <b>RESULTS, not words.</b></h4>
-                                <p class="p-about">If your digital marketing efforts aren't accelerating growth, ours will. Scale your lead pipeline, convert more customers, and expand to new areas or markets. From strategy and creative development to disciplined campaign execution - we deliver real results.</p>
-                                <a href="#contact" data-aos="zoom-out-up" data-aos-delay="1200" class="smooth-anchor ml-auto mr-auto ml-md-0 mt-4 btn primary-button">See what's Possible</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- About [3] -->
-        <section data-id="3" class="section-3 section-about highlights image-left slider_body">
-            <div class="container-about">
-                <div class="row">
-                    <div class="col-12 col-md-6" style="padding-left: 0;">
-                            <img src="assets/images/about.png" class="fit-image" alt="Institutional">
-                    </div>
-                    <div class="col-12 col-md-5 pl-md-5 align-self-center text-center text-md-left">
-                        <div class="row intro">
-                            <div class="col-12 p-0">
-                                <h2 class="title-about">What does growth</h2>
-                                <h3 class="h3-about">look like to you?</h3>
-                                <h4 class="h4-about">We focus on <b>RESULTS, not words.</b></h4>
-                                <p class="p-about">If your digital marketing efforts aren't accelerating growth, ours will. Scale your lead pipeline, convert more customers, and expand to new areas or markets. From strategy and creative development to disciplined campaign execution - we deliver real results.</p>
-                                <a href="#contact" data-aos="zoom-out-up" data-aos-delay="1200" class="smooth-anchor ml-auto mr-auto ml-md-0 mt-4 btn primary-button">See what's Possible</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-
-
-
 
         <!-- Services -->
         <section id="services" class="section-1 offers">
