--- a/home-4.html
+++ b/home-4.html
@@ -49,11 +49,10 @@
         =============================================== -->
         <style>
             :root {                
-                --header-bg-color: #F7F4E3;
+                --header-bg-color: #F7F4E3 !important;
                 --nav-item-color: #2f323a;
                 --top-nav-item-color: #2f323a;
-                --hero-bg-color: ##F7F4E3;
-
+                --hero-bg-color: #F7F4E3;
                 --section-1-bg-color: #eeeeee;
                 --section-2-bg-color: #F7F4E3;
                 --section-3-bg-color: #F7F4E3;
@@ -404,7 +403,7 @@
                                 <div class="container-about">
                                     <div class="row">
                                         <div class="col-12 col-md-6" style="padding-left: 0;">
-                                                <img src="assets/images/about.png" class="fit-image" alt="Institutional">
+                                                <img src="assets/images/about2.png" class="fit-image" alt="Institutional">
                                         </div>
                                         <div class="col-12 col-md-5 pl-md-5 align-self-center text-center text-md-left">
                                             <div class="row intro">
@@ -449,7 +448,7 @@
                                 <div class="container-about">
                                     <div class="row">
                                         <div class="col-12 col-md-6" style="padding-left: 0;">
-                                                <img src="assets/images/about.png" class="fit-image" alt="Institutional">
+                                                <img src="assets/images/about3.png" class="fit-image" alt="Institutional">
                                         </div>
                                         <div class="col-12 col-md-5 pl-md-5 align-self-center text-center text-md-left">
                                             <div class="row intro">
