--- a/home-4.html
+++ b/home-4.html
@@ -53,7 +53,7 @@
                 --nav-item-color: #2f323a;
                 --top-nav-item-color: #2f323a;
                 --hero-bg-color: #F7F4E3;
-                --section-1-bg-color: #eeeeee;
+                --section-1-bg-color: #222F3F;
                 --section-2-bg-color: #F7F4E3;
                 --section-3-bg-color: #F7F4E3;
                 --section-4-bg-color: #eeeeee;
@@ -486,51 +486,46 @@
                     </div>
                 </div>
                 <div class="row justify-content-center text-center items">
-                    <div class="col-12 col-md-6 col-lg-4 item">
-                        <div class="card featured">
+                    <div class="col-4 col-md-6 col-lg-2 item" style="padding: 0">
+                        <div class="card_services featured">
                             <i class="icon icon-globe"></i>
-                            <h4>Website Pro</h4>
-                            <p>We build professional responsive websites optimized for the most popular search engines.</p>
+                            <h6 class="service-title">Website Pro</h6>
+                            
                             <a href="page-single-service-1.html"><i class="btn-icon icon-arrow-right-circle"></i></a>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 item">
-                        <div class="card">
+                    <div class="col-4 col-md-6 col-lg-2 item" style="padding: 0">
+                        <div class="card_services">
                             <i class="icon icon-basket"></i>
-                            <h4>E-Commerce</h4>
-                            <p>Increase your sales with an incredible online store, full of features and functionality.</p>
+                            <h6 class="service-title">E-Commerce</h6>
                             <a href="page-single-service-1.html"><i class="btn-icon icon-arrow-right-circle"></i></a>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 item">
-                        <div class="card">
+                    <div class="col-4 col-md-6 col-lg-2 item" style="padding: 0">
+                        <div class="card_services">
                             <i class="icon icon-screen-smartphone"></i>
-                            <h4>Mobile Apps</h4>
-                            <p>Follow the global trend and create your revolutionary mobile app built with the best technologies.</p>
+                            <h6 class="service-title">Mobile Apps</h6>
                             <a href="page-single-service-1.html"><i class="btn-icon icon-arrow-right-circle"></i></a>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 item">
-                        <div class="card">
+                    <div class="col-4 col-md-6 col-lg-2 item" style="padding: 0">
+                        <div class="card_services">
                             <i class="icon icon-layers"></i>
-                            <h4>Web Application</h4>
-                            <p>We build applications for different purposes using technologies that allow you more security.</p>
+                            <h6 class="service-title">Web Application</h6>
                             <a href="page-single-service-1.html"><i class="btn-icon icon-arrow-right-circle"></i></a>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 item">
-                        <div class="card">
+                    <div class="col-4 col-md-6 col-lg-2 item" style="padding: 0">
+                        <div class="card_services">
                             <i class="icon icon-chart"></i>
-                            <h4>Digital Marketing</h4>
-                            <p>We work to promote your brand in partnership with the best marketing platforms today.</p>
+                            <h6 class="service-title">Digital Marketing</h6>
                             <a href="page-single-service-1.html"><i class="btn-icon icon-arrow-right-circle"></i></a>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 item">
-                        <div class="card featured">
+                    <div class="col-4 col-md-6 col-lg-2 item" style="padding: 0">
+                        <div class="card_services featured">
                             <i class="icon icon-bulb"></i>
-                            <h4>Brand Creation</h4>
-                            <p>We create your brand thinking about your target audience using design techniques.</p>
+                            <h6 class="service-title">Brand Creation</h6>
                             <a href="page-single-service-1.html"><i class="btn-icon icon-arrow-right-circle"></i></a>
                         </div>
                     </div>
