--- a/home-4.html
+++ b/home-4.html
@@ -343,7 +343,7 @@
                                 <img data-aos="zoom-out-up" data-aos-delay="800" src="assets/images/hero-1.png" class="hero-image" alt="Hero Image">
                                 <div class="slide-content row" data-mask-768="70">
                                     <div class="col-12 d-flex inner">
-                                        <div class="left align-self-center text-center text-md-left">
+                                        <div class="left align-self-center text-md-left">
                                             <h1 data-aos="zoom-out-up" data-aos-delay="400" class="title">
                                             <span class="title-1">Jump</span> <br>
                                             <span class="title-2">Into</span> <br>
@@ -386,7 +386,7 @@
                                 <img data-aos="zoom-out-up" data-aos-delay="800" src="assets/images/hero-2.png" class="hero-image2" alt="Hero Image">
                                 <div class="slide-content row" data-mask-768="70">
                                     <div class="col-12 d-flex inner">
-                                        <div class="left align-self-center text-center text-md-left">
+                                        <div class="left align-self-center text-md-left">
                                             <h2 data-aos="zoom-out-up" data-aos-delay="400" class="title">
                                                 <span class="title-1">Go further,</span> <br>
                                                 <span class="title-3">together</span>
@@ -430,7 +430,7 @@
                                 <img data-aos="zoom-out-up" data-aos-delay="800" src="assets/images/hero-3.png" class="hero-image3" alt="Hero Image">
                                 <div class="slide-content row" data-mask-768="70">
                                     <div class="col-12 d-flex inner">
-                                        <div class="left slider-3 align-self-center text-center text-md-left">
+                                        <div class="left slider-3 align-self-center text-md-left">
                                             <h2 data-aos="zoom-out-up" data-aos-delay="400" class="title">
                                                 <span class="title-1">Data -driven</span> <br>
                                                 <span class="title-2">results to scale</span> <br>
@@ -448,7 +448,7 @@
                                 <div class="container-about">
                                     <div class="row">
                                         <div class="col-12 col-md-6" style="padding-left: 0;">
-                                                <img src="assets/images/about3.png" class="fit-image" alt="Institutional">
+                                                <img src="assets/images/about3.png"  alt="Institutional">
                                         </div>
                                         <div class="col-12 col-md-5 pl-md-5 align-self-center text-center text-md-left">
                                             <div class="row intro">
