--- a/home-4.html
+++ b/home-4.html
@@ -52,7 +52,7 @@
                 --header-bg-color: #F7F4E3 !important;
                 --nav-item-color: #2f323a;
                 --top-nav-item-color: #2f323a;
-                --hero-bg-color: #F7F4E3;
+                --hero-bg-color: #f7f4e300;
                 --section-1-bg-color: #222F3F;
                 --section-2-bg-color: #F7F4E3;
                 --section-3-bg-color: #F7F4E3;
