--- a/home-4.html
+++ b/home-4.html
@@ -430,57 +430,64 @@
             <div class="container">
                 <div class="row intro">
                     <div class="col-12 col-md-9 align-self-center text-center text-md-left">
-                        <h2 class="featured">Our Services</h2>
-                        <p>Focused on results we seek to raise the level of our customers.</p>
+                        <h2 class="featured services_pp_title">Our <b>Services</b></h2>
                     </div>
-                    <div class="col-12 col-md-3 align-self-end">
-                        <a href="page-services-1.html" class="btn mx-auto mr-md-0 ml-md-auto primary-button"><i class="icon-grid"></i>VIEW ALL</a>
-                    </div>
+
                 </div>
                 <div class="row justify-content-center text-center items">
                     <div class="col-4 col-md-6 col-lg-2 item" style="padding: 0">
                         <div class="card_services featured">
-                            <i class="icon icon-globe"></i>
-                            <h6 class="service-title">Website Pro</h6>
+                            <img src="/assets/images/Research_Planning.png" alt="" style="width: 50px;">
+                            <h6 class="service-title">Research & Planning</h6>
                             
-                            <a href="page-single-service-1.html"><i class="btn-icon icon-arrow-right-circle"></i></a>
+                            <a href="page-single-service-1.html"></a>
                         </div>
                     </div>
                     <div class="col-4 col-md-6 col-lg-2 item" style="padding: 0">
                         <div class="card_services">
-                            <i class="icon icon-basket"></i>
-                            <h6 class="service-title">E-Commerce</h6>
-                            <a href="page-single-service-1.html"><i class="btn-icon icon-arrow-right-circle"></i></a>
+                            <img src="/assets/images/Advertising.png" alt="" style="width: 50px;">
+                            <h6 class="service-title">Advertising</h6>
+                            <a href="page-single-service-1.html"></a>
                         </div>
                     </div>
                     <div class="col-4 col-md-6 col-lg-2 item" style="padding: 0">
                         <div class="card_services">
-                            <i class="icon icon-screen-smartphone"></i>
-                            <h6 class="service-title">Mobile Apps</h6>
-                            <a href="page-single-service-1.html"><i class="btn-icon icon-arrow-right-circle"></i></a>
+                            <img src="/assets/images/Grupo 8088.png" alt="" style="width: 50px;">
+                            <h6 class="service-title">Email Marketing</h6>
+                            <a href="page-single-service-1.html"></a>
                         </div>
                     </div>
                     <div class="col-4 col-md-6 col-lg-2 item" style="padding: 0">
                         <div class="card_services">
-                            <i class="icon icon-layers"></i>
-                            <h6 class="service-title">Web Application</h6>
-                            <a href="page-single-service-1.html"><i class="btn-icon icon-arrow-right-circle"></i></a>
+                            <img src="/assets/images/Ecommerce.png" alt="" style="width: 50px;">
+                            <h6 class="service-title">E-commerce</h6>
+                            <a href="page-single-service-1.html"></a>
                         </div>
                     </div>
                     <div class="col-4 col-md-6 col-lg-2 item" style="padding: 0">
                         <div class="card_services">
-                            <i class="icon icon-chart"></i>
-                            <h6 class="service-title">Digital Marketing</h6>
-                            <a href="page-single-service-1.html"><i class="btn-icon icon-arrow-right-circle"></i></a>
+                            <img src="/assets/images/Online_Learning.png" alt="" style="width: 50px;">
+                            <h6 class="service-title">Online Learning</h6>
+                            <a href="page-single-service-1.html"></a>
+                        </div>
+                    </div>
+                    <div class="col-4 col-md-6 col-lg-2 item" style="padding: 0">
+                        <div class="card_services">
+                            <img src="/assets/images/Creative_Services.png" alt="" style="width: 50px;">
+                            <h6 class="service-title">Creative Services</h6>
+                            <a href="page-single-service-1.html"></a>
                         </div>
                     </div>
                     <div class="col-4 col-md-6 col-lg-2 item" style="padding: 0">
                         <div class="card_services featured">
-                            <i class="icon icon-bulb"></i>
-                            <h6 class="service-title">Brand Creation</h6>
-                            <a href="page-single-service-1.html"><i class="btn-icon icon-arrow-right-circle"></i></a>
+                            <img src="/assets/images/SEO.png" alt="" style="width: 50px;">
+                            <h6 class="service-title">SEO</h6>
+                            <a href="page-single-service-1.html"></a>
                         </div>
                     </div>
+                </div>
+                <div class="col-12 col-md-3 align-self-end">
+                    <a href="page-services-1.html" class="btn mx-auto mr-md-0 ml-md-auto primary-button"><i class="icon-grid"></i>VIEW ALL</a>
                 </div>
             </div>
         </section>
