--- a/home-4.html
+++ b/home-4.html
@@ -1066,14 +1066,11 @@
                                 <div class="branding col-12 p-3 text-center text-lg-left item">
                                     <div class="brand">
                                         <a href="/" class="logo">
-                                            Leverage.                                 
-                                            <!-- 
-                                                Custom Logo
-                                                <img src="assets/images/logo.svg" alt="Leverage">
-                                            -->
+                                            <img src="assets/images/Logo footer.png" alt="Leverage">
+                                            
                                         </a>
                                     </div>
-                                    <p>Authentic and innovative.<br>Built to the smallest detail<br>with a focus on usability<br>and performance.</p>
+                                    <p></p>
                                     <ul class="navbar-nav social share-list mt-0 ml-auto">
                                         <li class="nav-item">
                                             <a href="#" class="nav-link"><i class="icon-social-instagram ml-0"></i></a>
