--- a/home-4.html
+++ b/home-4.html
@@ -444,7 +444,7 @@
                         </div>
                     </div>
                     <div class="col-4 col-md-6 col-lg-2 item" style="padding: 0">
-                        <div class="card_services">
+                        <div class="card_services featured">
                             <img src="/assets/images/Advertising.png" alt="" style="width: 50px;">
                             <h6 class="service-title">Advertising</h6>
                             <a href="page-single-service-1.html"></a>
