--- a/home-4.html
+++ b/home-4.html
@@ -429,12 +429,10 @@
         <section id="services" class="section-1 offers">
             <div class="container">
                 <div class="row intro">
-                    <div class="col-12 col-md-9 align-self-center text-center text-md-left">
-                        <h2 class="featured services_pp_title">Our <b>Services</b></h2>
+                    <div class="col-12 text-center">
+                        <h2 class="services_pp_title">Our <b>Services</b></h2>
                     </div>
                 </div>
-
-
                 <div class="row justify-content-center text-center items">
                     <div class="item" style="padding: 0">
                         <div class="card_services featured">
@@ -489,8 +487,8 @@
                 </div>
 
                 
-                <div class="col-12 col-md-3 align-self-end">
-                    <a href="page-services-1.html" class="btn mx-auto mr-md-0 ml-md-auto primary-button"><i class="icon-grid"></i>VIEW ALL</a>
+                <div class="col-12">
+                    <a href="page-services-1.html" class="btn mx-auto primary-button">VIEW ALL</a>
                 </div>
             </div>
         </section>
@@ -533,51 +531,6 @@
                         <a href="assets/images/about-1.jpg">
                             <img src="assets/images/about-1.jpg" class="fit-image" alt="About Us">
                         </a>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- About [video] -->
-        <section id="video" class="section-3 highlights image-left">
-            <div class="container">
-                <div class="row">
-                    <div class="gallery col-12 col-md-6">
-                        <a data-poster="assets/images/about-9.jpg" href="https://www.youtube.com/watch?v=7e90gBu4pas">
-                            <i class="play-video icon-control-play"></i>
-                            <div class="mask-radius"></div>
-                            <img src="assets/images/about-9.jpg" class="fit-image" alt="Institutional">
-                        </a>
-                    </div>
-                    <div class="col-12 col-md-6 pl-md-5 align-self-center text-center text-md-left">
-                        <div class="row intro">
-                            <div class="col-12 p-0">
-                                <h2 class="featured alt">Institutional</h2>
-                                <p>Get to know a little of our history and the road we traveled that took us to the level we are today.</p>
-                            </div>
-                        </div>
-                        <div class="row items">
-                            <div class="col-12 p-0">
-                                <div class="row item">
-                                    <div class="col-12 col-md-2 align-self-center">
-                                        <i class="icon icon-trophy"></i>
-                                    </div>
-                                    <div class="col-12 col-md-9 align-self-center">
-                                        <h4>Tradition</h4>
-                                        <p>We are excellence in developing web solutions for companies.</p>
-                                    </div>  
-                                </div>
-                                <div class="row item">
-                                    <div class="col-12 col-md-2 align-self-center">
-                                        <i class="icon icon-diamond"></i>
-                                    </div>
-                                    <div class="col-12 col-md-9 align-self-center">
-                                        <h4>Innovation</h4>
-                                        <p>We seek to build something that changes people's lives.</p>
-                                    </div>  
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
